--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,95 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+html, body {
+    background-color: #fff;
+    color: #636b6f;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    height: 100vh;
+    margin: 0;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.title {
+    font-size: 84px;
+}
+
+.links > a {
+    color: #636b6f;
+    padding: 0 25px;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
+
+//
+//  ##     ###### ###### ##  ## ###### ###### ###### ##  ##
+//  ##     ###### ### ## ## ##  ###### ###### ###### ### ##
+//  ###### ##  ## ###    ####   ##  ##   ##   ##  ## ######
+//  ##  ## ###### ###    ####   ######   ##   ##  ## ## ###
+//  ##  ## ##  ## ### ## #####  ##  ##   ##   ##  ## ##  ##
+//  ##  ## ##  ## ###### ##  ## ##  ##   ##   ###### ##  ##
+//
+
+.wrapper {
+    max-width: 1180px;
+    margin: 0 auto;
+    background-color: #ddd;
+    padding: 2rem;
+}
+
+.flex-row {
+    display: flex;
+    &.space-between {
+        justify-content: space-between;
+    }
+}
+
+.heading {
+    * {
+        text-align: center;
+    }
+}
+
+.answers {
+    margin: 0 5%;
+    padding: 2rem;
+    background-color: #fff;
+    border: 1px solid lighten(black, 20%);
+    border-radius: 5px;
+}
+
+
+
+
