--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10719,23 +10719,11 @@ body {
   padding: 2rem;
 }
 
-.flex-row {
-  display: flex;
-}
-
-.flex-row.space-between {
-  justify-content: space-between;
-}
-
 .heading * {
   text-align: center;
 }
 
-.answers {
-  margin: 0 5%;
-  padding: 2rem;
-  background-color: #fff;
-  border: 1px solid #333333;
-  border-radius: 5px;
+.pagination {
+  flex-wrap: wrap;
 }
 
