--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -81,6 +81,9 @@ html, body {
 }
 
 .heading {
+    h2 {
+        font-size: 20px;
+    }
     * {
         text-align: center;
     }
@@ -88,4 +91,16 @@ html, body {
 
 .pagination {
     flex-wrap: wrap;
+}
+
+.navbar {
+    margin: 1em 0;
+    background: #ed7e23;
+}
+
+#replace-title {
+    transition: all 0.5s;
+    color: #ed7e23;
+    display: block;
+    font-size: 28px;
 }
